syntax = "proto3";

import "google/protobuf/empty.proto";

package crouton;

service Catalog {
    rpc Create (QueryRequest) returns (CreateReply);
    rpc Inc (QueryRequest) returns (AnswerReply);
    rpc Read (QueryRequest) returns (AnswerReply);
    rpc Apply (ApplyRequest) returns (google.protobuf.Empty);
}

message QueryRequest {
   string name = 1;
   string actor = 2;
}

message CreateReply {
    int32 status = 1;
}

message AnswerReply {
    int32 value = 1;
}

message ApplyRequest {
    string reqJSon = 1;
}